Fix: 헤더 z-index 999로

--- a/components/common/Header/Header.module.scss
+++ b/components/common/Header/Header.module.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   gap: 927px;
+  z-index: 999;
   .logo {
     > img {
       height: 27px;
